--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="carousel-inner p-5 bg-success rounded-3">
                     <div class="carousel-item active">
                         <div class="row d-flex align-items-center">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-12">
                                 <h1>Mega LCD TV For Sports
                                 </h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
@@ -74,14 +74,14 @@
                                 <button class="btn btn-warning d-flex align-items-center my-3">Buy Now <i
                                         class="fas fa-arrow-right ms-2"></i></button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/banner-images/tv.png" class="d-block w-100 " alt="...">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex align-items-center">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-12">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
@@ -89,14 +89,14 @@
                                 <button class="btn btn-warning d-flex align-items-center my-3">Buy Now <i
                                         class="fas fa-arrow-right ms-2"></i></button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100 " alt="...">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex align-items-center">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-12">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front
                                     of fake sports.</p>
@@ -104,7 +104,7 @@
                                 <button class="btn btn-warning d-flex align-items-center my-3">Buy Now <i
                                         class="fas fa-arrow-right ms-2"></i></button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100 " alt="...">
                             </div>
                         </div>
@@ -128,20 +128,20 @@
     <main id="product">
         <!-- Product Section  -->
         <section class="container">
-            <div class="row g-5">
-                <div class="col-lg-4">
+            <div class="row g-lg-5">
+                <div class="col-lg-4 col-12">
                     <div class="d-flex justify-content-between align-items-center bg-warning rounded-3 px-5 py-2">
                         <h1>Watch</h1>
                         <img src="images/categories/watch.png" alt="" style="width:30%;">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <div class="d-flex justify-content-between align-items-center bg-success rounded-3 px-5 py-2">
                         <h1>Bag</h1>
                         <img src="images/categories/bag.png" alt="" style="width:30%;">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <div class="d-flex justify-content-between align-items-center bg-primary rounded-3 px-5 py-2">
                         <h1>Shoes</h1>
                         <img src="images/categories/shoes.png" alt="" style="width:30%;">
@@ -155,7 +155,7 @@
             <div class="container my-5" id="shoes">
                 <h1>Shoes</h1>
                 <div class="row g-3">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="card shadow p-3">
                             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="card shadow p-3">
                             <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -185,7 +185,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="card shadow p-3">
                             <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -207,7 +207,7 @@
             <div class="container my-5" id="backpack">
                 <h1>Backpack</h1>
                 <div class="row g-3">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="card shadow p-3 h-100">
                             <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -224,7 +224,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="card shadow p-3 h-100">
                             <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -241,7 +241,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="card shadow p-3 h-100">
                             <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                             <div class="card-body">
