--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <main id="product">
         <!-- Product Section  -->
         <section class="container">
-            <div class="row g-lg-5">
+            <div class="row g-lg-5 gy-5">
                 <div class="col-lg-4 col-12">
                     <div class="d-flex justify-content-between align-items-center bg-warning rounded-3 px-5 py-2">
                         <h1>Watch</h1>
